// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render expensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling  
    $2.35
  </h1>
</div>
`;

exports[`Should correctly render expensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling  
    $2,345,648.52
  </h1>
</div>
`;
